--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>      
              <!--make this button interactive link="!start/home2.html"-->
 
-             <a href="/main/html/1start/home2.html">
+             <a href="/html/1start/home2.html">
                 <button>next</button>
              </a>
             
